RESOLVED FIXED223700
REGRESSION (r273154): [iOS] Two magnifier symbols on google.com
https://bugs.webkit.org/show_bug.cgi?id=223700
Summary REGRESSION (r273154): [iOS] Two magnifier symbols on google.com
Aditya Keerthi
Reported 2021-03-24 10:36:02 PDT
...
Attachments
Patch (3.98 KB, patch)
2021-03-24 10:52 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-03-24 10:36:18 PDT
Aditya Keerthi
Comment 2 2021-03-24 10:52:03 PDT
EWS
Comment 3 2021-03-24 12:57:42 PDT
Committed r274965: <https://commits.webkit.org/r274965> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424157 [details].
Note You need to log in before you can comment on or make changes to this bug.